first fixed navigation

--- a/index.html
+++ b/index.html
@@ -295,19 +295,19 @@
 		<a href="#">
 			HOME
 		</a>
-		<a href="#portfolio">
+		<a href="#projects">
 			PROJECTS
 		</a>
-		<a href="#portfolio">
+		<a href="#reports_n_publications">
 			REPORTS & PUBLICATIONS
 		</a>
-		<a href="#academics_n_career">
+		<a href="#academics_n_career_history">
 			ACADEMICS & CAREER HISTORY
 		</a>
-		<a href="#portfolio">
+		<a href="#course_n_certifications">
 			COURSE & CERTIFICATION
 		</a>
-		<a href="#portfolio">
+		<a href="#workshops_navigation">
 			WORKSHOPS
 		</a>
 		<a href="#portfolio">
@@ -323,7 +323,7 @@
 			CONTACT
 		</a>
 	</nav>
-	<section class="portfolio">
+	<section class="portfolio" id="projects">
 		<h2>
 			PROJECTS
 		</h2>
@@ -502,7 +502,7 @@
 				</div>
 			</div>
 	</section>
-	<section class="portfolio">
+	<section class="portfolio" id="reports_n_publications">
 		<h2>
 			REPORTS & PUBLICATIONS
 		</h2>
@@ -560,7 +560,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="academics_n_career">
+	<section class="academics_n_career" id="academics_n_career_history">
 		<h2>
 			ACADEMICS & CAREER HISTORY
 		</h2>
@@ -622,7 +622,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="course_n_cert">
+	<section class="course_n_cert" id="course_n_certifications">
 		<h2>
 			COURSE & CERTIFICATION
 		</h2>
@@ -793,7 +793,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="services">
+	<section class="services" id="workshops_navigation">
 		<h2>
 			WORKSHOPS
 		</h2>
