--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 		<a href="#workshops_navigation">
 			WORKSHOPS
 		</a>
-		<a href="#portfolio">
+		<a href="#events_navigation">
 			EVENTS
 		</a>
 		<a href="#portfolio">
@@ -963,7 +963,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="course_n_cert">
+	<section class="course_n_cert" id="events_navigation">
 		<h2>
 			EVENTS
 		</h2>
