--- a/index.html
+++ b/index.html
@@ -313,13 +313,13 @@
 		<a href="#events_navigation">
 			EVENTS
 		</a>
-		<a href="#portfolio">
+		<a href="#skills_navigation">
 			SKILLS
 		</a>
-		<a href="#about-section">
+		<a href="#about_navigation">
 			ABOUT
 		</a>
-		<a href="#contact">
+		<a href="#contact_navigation">
 			CONTACT
 		</a>
 	</nav>
@@ -1062,7 +1062,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="course_n_cert">
+	<section class="course_n_cert" id="skills_navigation">
 		<h2>
 			SKILLS
 		</h2>
@@ -1209,7 +1209,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="about-section">
+	<section class="about-section" id="about_navigation">
 		<img alt="Imran's Img" height="300"
 			src="https://github.com/cybercat37794/imranahmed/blob/master/page%20graphics/about_me%20photo.png?raw=true"
 			width="300" />
@@ -1246,7 +1246,7 @@
 		</div>
 	</section>
 
-	<section class="contact">
+	<section class="contact" id="contact_navigation">
 		<h2>
 			Get In Touch
 		</h2>
