nav bar resized and hovering color added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
 			color: #fff;
 			margin: 0 15px;
 			text-decoration: none;
-			font-size: 1em;
+			font-size: 0.75em;
+		}
+
+		nav a:hover {
+			color: #a8c66c;
 		}
 
 		.portfolio,
