education history fixed

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
 						Master of Applied Computing
 					</strong>
 					<br />
-					2024 - Present
+					September 2024 - Present
 					<br />
 					University of Windsor
 				</p>
