commit on 5th jan

--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
 			Get In Touch
 		</h2>
 		<div class="content">
-			<div class="form">
+			<!-- <div class="form">
 				<input placeholder="Your Name" type="text" />
 				<input placeholder="Your Email" type="email" />
 				<input placeholder="Your Phone" type="text" />
@@ -1263,7 +1263,7 @@
 				<button>
 					Send Message
 				</button>
-			</div>
+			</div> -->
 			<div class="details">
 				<h3>
 					My Contact Details
