--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 					<br />
 					September 2024 - December 2024
 					<br />
-					Telus International
+					Telus Digital
 				</p>
 				<p>
 					<strong>
