--- a/index.html
+++ b/index.html
@@ -338,7 +338,8 @@
 						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/gnn%20project.png?raw=true"
 						width="300" />
 					<h3>
-						Mitigating Racial Bias in Natural Language Understanding with Graph Neural Networks
+						Research Project: Mitigating Racial Bias in Natural Language Understanding with Graph Neural
+						Networks
 					</h3>
 					<p>
 						Natural Language Processing (NLP) models often inherit racial biases present in textual data. By
