--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/Bangla%20Digit%20Classification%20img.png?raw=true"
 						width="300" />
 					<h3>
-						Bangla Handwritten Digit Classification Using Raw Image Data
+						Research Project: Bangla Handwritten Digit Classification Using Raw Image Data
 					</h3>
 					<p>
 						In this project, the main focus was to classify Bangla handwritten digits from raw image data.
