add volunteer experience description to index.html

--- a/index.html
+++ b/index.html
@@ -1086,6 +1086,11 @@
 				<p>
 					October 26, 2024
 				</p>
+				<p>
+					As a volunteer, I had the opportunity to assist prospective students and their families in
+					navigating the campus, answering questions, and providing information about the programs and
+					services offered at the University of Windsor.
+				</p>
 			</div>
 		</div>
 	</section>
