update event description for clarity and grammatical accuracy in index.html

--- a/index.html
+++ b/index.html
@@ -1120,9 +1120,9 @@
 					September 9, 2024
 				</p>
 				<p>
-					Join us for the third and final part of the Windsor-Detroit’s Digital Twin series, where we will
-					explore the potential of digital twins in urban planning, infrastructure development, and
-					sustainability. The expert panel will discussed the challenges and opportunities of implementing
+					Joined the third and final part of the Windsor-Detroit’s Digital Twin series, where the potential of
+					the digital twins in urban planning, infrastructure development, and sustainability was
+					discussed. The expert panel also discuss the challenges and opportunities of implementing
 					digital twins in the Windsor-Detroit region, and the transformative impact they can have on
 					community engagement, decision-making, and future development.
 				</p>
