gen ai workshop

--- a/index.html
+++ b/index.html
@@ -827,6 +827,17 @@
 		<div class="content">
 			<div class="service">
 				<h3>
+					New Technology Trends in GenAI
+				</h3>
+				<p>
+					In this workshop, Guest Speaker Naresh R. Jasotani, Principal Technologist at Google, discussed
+					emerging trends in Generative AI (GenAI) and anticipated future advancements in the field. He
+					highlighted the potential of GenAI agents, predicting that 2025 will be a pivotal year for their
+					development and implementation.
+				</p>
+			</div>
+			<div class="service">
+				<h3>
 					Technical Workshop - Unlocking the Power of Recommender Systems by: Bahareh Rahmatikargar
 				</h3>
 				<p>
