--- a/index.html
+++ b/index.html
@@ -835,6 +835,10 @@
 					highlighted the potential of GenAI agents, predicting that 2025 will be a pivotal year for their
 					development and implementation.
 				</p>
+				<a href="https://www.eventbrite.com/e/new-technology-trends-in-genai-with-narash-r-jasotani-tickets-1217082780359?aff=oddtdtcreator"
+					class="learn-more-button">
+					Learn More
+				</a>
 			</div>
 			<div class="service">
 				<h3>
