new content in the workshop

--- a/index.html
+++ b/index.html
@@ -830,10 +830,14 @@
 					New Technology Trends in GenAI
 				</h3>
 				<p>
-					In this workshop, Guest Speaker Naresh R. Jasotani, Principal Technologist at Google, discussed
-					emerging trends in Generative AI (GenAI) and anticipated future advancements in the field. He
-					highlighted the potential of GenAI agents, predicting that 2025 will be a pivotal year for their
-					development and implementation.
+					In this workshop, Guest Speaker Naresh R. Jasotani, Principal Technologist at Google, provided an
+					in-depth analysis of emerging trends in Generative AI (GenAI) and projected future advancements in
+					the field. Mr. Jasotani elaborated on Google's large language model, Gemini, and introduced tools
+					such as NotebookLM, GenAI Playground, and Gemini Studio. He emphasized the transformative potential
+					of GenAI agents and forecasted that the year 2025 would be a critical period for their development
+					and widespread implementation. The workshop offered valuable insights into the evolving landscape of
+					GenAI, highlighting its implications for various industries and the innovative applications that are
+					expected to emerge.
 				</p>
 				<a href="https://www.eventbrite.com/e/new-technology-trends-in-genai-with-narash-r-jasotani-tickets-1217082780359?aff=oddtdtcreator"
 					class="learn-more-button">
