Add vehicle data analysis project and update workshop title

--- a/index.html
+++ b/index.html
@@ -334,6 +334,24 @@
 		<div class="categories">
 			<div class="items">
 				<div class="item">
+					<img alt="Vehicle data analysis project" height="300"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/gnn%20project.png?raw=true"
+						width="300" />
+					<h3>
+						Vehicle Data Analysis and Predictive Modeling Using R
+					</h3>
+					<p>
+						This project focuses on comprehensive vehicle data analysis using the R programming language and
+						R Studio, showcasing various techniques in data preprocessing, exploratory data analysis (EDA),
+						and data visualization. The goal was to explore a vehicle dataset containing details like car
+						prices, fuel types, transmission types, and other vehicle characteristics, enabling insightful
+						analysis that can assist in pricing prediction and understanding vehicle market trends.
+					</p>
+					<a href="https://github.com/cybercat37794/Debias-Racial-Bias-Using-GNN" class="learn-more-button">
+						Learn More
+					</a>
+				</div>
+				<div class="item">
 					<img alt="GNN project img" height="300"
 						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/gnn%20project.png?raw=true"
 						width="300" />
@@ -827,7 +845,7 @@
 		<div class="content">
 			<div class="service">
 				<h3>
-					New Technology Trends in GenAI
+					Technical Workshop - New Technology Trends in GenAI
 				</h3>
 				<p>
 					In this workshop, Guest Speaker Naresh R. Jasotani, Principal Technologist at Google, provided an
