Update vehicle data analysis project image source

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 			<div class="items">
 				<div class="item">
 					<img alt="Vehicle data analysis project" height="300"
-						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/gnn%20project.png?raw=true"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/Data%20Analytics%20Project.png?raw=true"
 						width="300" />
 					<h3>
 						Vehicle Data Analysis and Predictive Modeling Using R
