Update link for vehicle data analysis project

--- a/index.html
+++ b/index.html
@@ -347,7 +347,8 @@
 						prices, fuel types, transmission types, and other vehicle characteristics, enabling insightful
 						analysis that can assist in pricing prediction and understanding vehicle market trends.
 					</p>
-					<a href="https://github.com/cybercat37794/Debias-Racial-Bias-Using-GNN" class="learn-more-button">
+					<a href="https://github.com/cybercat37794/Vehicle-Data-Analysis-and-Predictive-Modeling-Using-R"
+						class="learn-more-button">
 						Learn More
 					</a>
 				</div>
