--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 			Imran Ahmed
 		</h1>
 		<p>
-			AI &amp; ML ENGINEER
+			AI &amp; ML PRACTITIONER | DEEP LEARNING | DATA SCIENCE | NLP | DATA SCIENCE | CLOUD AI
 		</p>
 	</header>
 	<nav>
