--- a/index.html
+++ b/index.html
@@ -581,6 +581,31 @@
 						Dataset DOI
 					</a>
 				</div>
+				<div class="item">
+					<img alt="Movie Plot dataset" height="300"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20&%20Publication%20Graphics/bangla%20digit%20dataset-cover.png?raw=true"
+						width="300" />
+					<h3>
+						Dataset Publish: 7k+ Movie Plot Dataset
+					</h3>
+					<p>
+						This dataset contains information about movies gathered from IMDB and other sources. It includes
+						the following features:
+						Title: 7k+ Movie Plot Dataset.
+						Plot: A brief summary or description of the movie's story.
+						Genres: The genres or categories the movie belongs to (e.g., Drama, Action, Comedy).
+						Countries: The countries where the movie was produced.
+						Languages: The primary languages spoken in the movie.
+						Average Rating: The average user rating given to the movie.
+						Number of Votes: The total number of user votes or reviews the movie has received.
+
+						The data has been cleaned and preprocessed to remove unnecessary symbols and text, providing a
+						more streamlined and usable version for analysis.
+					</p>
+					<a href="https://doi.org/10.34740/KAGGLE/DSV/10697654" class="learn-more-button">
+						Dataset DOI
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
