--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 				</div>
 				<div class="item">
 					<img alt="Movie Plot dataset" height="300"
-						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20&%20Publication%20Graphics/bangla%20digit%20dataset-cover.png?raw=true"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20&%20Publication%20Graphics/movie%20plot%20dataset.png?raw=true"
 						width="300" />
 					<h3>
 						Dataset Publish: 7k+ Movie Plot Dataset
