--- a/index.html
+++ b/index.html
@@ -643,12 +643,12 @@
 				</h3>
 				<p>
 					<strong>
-						Field Marketing Representative (Part-time)
+						Team Member (Part-time)
 					</strong>
 					<br />
-					November 2024 - Present
+					October 2024 - Present
 					<br />
-					Kognitive Sales Solutions
+					Freshly Squeezed, Devonshire Mall
 				</p>
 				<p>
 					<strong>
