--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		Imran Ahmed
 	</title>
 	<link rel="icon"
-		href="https://github.com/cybercat37794/imranahmed/blob/master/page%20graphics/fevicon_on_tab.png?raw=true"
+		href="https://github.com/cybercat37794/imranahmed/blob/master/page%20graphics/fevicon_new.png?raw=true"
 		type="image/x-icon">
 	<link
 		href="https://raw.githubusercontent.com/cybercat37794/imranahmed/refs/heads/master/two%20css%20file/all.min.css"
