add GitHub link to index.html

--- a/index.html
+++ b/index.html
@@ -1396,6 +1396,9 @@
 			<div class="buttons">
 				<a href="https://www.linkedin.com/in/imran-ahmed-mac-uwindsor/">LinkedIn</a>
 			</div>
+			<div class="buttons">
+				<a href="https://github.com/cybercat37794">Github</a>
+			</div>
 		</div>
 	</section>
 
