update job location details in index.html

--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
 					<br />
 					October 2024 - February 2025
 					<br />
-					Freshly Squeezed, Devonshire Mall
+					Freshly Squeezed, Devonshire Mall, Windsor, ON
 				</p>
 				<p>
 					<strong>
