add cybersecurity workshop details to services section

--- a/index.html
+++ b/index.html
@@ -888,6 +888,24 @@
 		<div class="content">
 			<div class="service">
 				<h3>
+					Sterling’s Cybersecurity Workshop Series
+				</h3>
+				<p>
+					Sterling’s workshops on Cybersecurity, hosted by Sterling Information
+					Technologies Inc. in collaboration with the University of Windsor and EC-Council. This workshop
+					series provided me with valuable insights and hands-on experience in the field of
+					cybersecurity. The workshops covered a range of topics, including ethical hacking, network defense,
+					and digital
+					forensics.
+
+				</p>
+				<a href="https://www.linkedin.com/posts/sterlinginfo_sterling360cybersuite-cybersecurity-futureleaders-activity-7282804073806864385-YGXp?utm_source=share&utm_medium=member_desktop&rcm=ACoAADE9Ix4BW7k9Tyic0Hl2RXMh4H2HoYjVSGQ"
+					class="learn-more-button">
+					Learn More
+				</a>
+			</div>
+			<div class="service">
+				<h3>
 					Technical Workshop - New Technology Trends in GenAI
 				</h3>
 				<p>
