--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<title>
 		Imran Ahmed
 	</title>
-	<link rel="icon" href="https://drive.google.com/file/d/1IVVkJYezcYdRbG3Zi0nkS9EPFmAtUES_/view?usp=drive_link"
+	<link rel="icon"
+		href="https://github.com/cybercat37794/imranahmed/blob/master/page%20graphics/fevicon_new.png?raw=true"
 		type="image/x-icon">
 	<link
 		href="https://raw.githubusercontent.com/cybercat37794/imranahmed/refs/heads/master/two%20css%20file/all.min.css"
