about me photo change

--- a/index.html
+++ b/index.html
@@ -1417,7 +1417,7 @@
 	</section>
 	<section class="about-section" id="about_navigation">
 		<img alt="Imran's Img" height="300"
-			src="https://github.com/imran-ahmed377/imranahmed/blob/master/page%20graphics/about_me%20photo.png?raw=true"
+			src="https://github.com/imran-ahmed377/imranahmed/blob/master/page%20graphics/about_me%20photo2.jpg?raw=true"
 			width="300" />
 		<div class="about-text">
 			<h2>
