new experience added

--- a/index.html
+++ b/index.html
@@ -625,12 +625,12 @@
 				</h3>
 				<p>
 					<strong>
-						Team Member (Part-time)
+						AI Research Intern (Collaborative Project)
 					</strong>
 					<br />
-					October 2024 - February 2025
+					May 2025 - Aug 2025
 					<br />
-					Freshly Squeezed, Devonshire Mall, Windsor, ON
+					MealLens AI, Windsor, Ontario, Canada
 				</p>
 				<p>
 					<strong>
@@ -640,6 +640,15 @@
 					September 2024 - December 2024
 					<br />
 					Telus Digital
+				</p>
+				<p>
+					<strong>
+						Junior Data Engineer
+					</strong>
+					<br />
+					January 2023 - August 2024
+					<br />
+					Hydroque, Dhaka, Bangladesh
 				</p>
 				<p>
 					<strong>
