enhance navigation and update experience section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 		}
 
 		nav {
+			position: sticky;
+			top: 0;
+			z-index: 1000;
 			text-align: center;
 			padding: 20px 0;
 			background-color: #333;
@@ -273,10 +276,14 @@
 			border-radius: 5px;
 			text-decoration: none;
 			text-align: center;
+			transition: all 0.3s ease;
 		}
 
 		a.learn-more-button:hover {
-			background-color: #a8c66c;
+			background-color: #fff;
+			color: #000;
+			transform: translateY(-2px);
+			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 		}
 	</style>
 </head>
@@ -605,7 +612,7 @@
 						Master of Applied Computing
 					</strong>
 					<br />
-					September 2024 - Present
+					September 2024 - December 2025
 					<br />
 					University of Windsor
 				</p>
@@ -625,10 +632,19 @@
 				</h3>
 				<p>
 					<strong>
+						Data Scientist (Master's Co-op)
+					</strong>
+					<br />
+					Oct 2024 - Aug 2025
+					<br />
+					Exeevo, Toronto, Ontario, Canada
+				</p>
+				<p>
+					<strong>
 						AI Research Intern (Collaborative Project)
 					</strong>
 					<br />
-					May 2025 - Aug 2025
+					Oct 2024 - Aug 2025
 					<br />
 					MealLens AI, Windsor, Ontario, Canada
 				</p>
@@ -1456,7 +1472,7 @@
 				contribute to exciting advancements in the field.
 			</p>
 			<div class="buttons">
-				<a href="https://www.linkedin.com/in/imran-ahmed-mac-uwindsor/">LinkedIn</a>
+				<a href="https://www.linkedin.com/in/-imran-ahmed-/">LinkedIn</a>
 				<a href="https://github.com/imran-ahmed377">Github</a>
 			</div>
 		</div>
