add project date display to portfolio section

--- a/index.html
+++ b/index.html
@@ -213,6 +213,13 @@
 			color: #aaa;
 		}
 
+		.project-date {
+			font-size: 0.85em;
+			color: #a8c66c;
+			margin: 5px 0 10px 0;
+			font-weight: 700;
+		}
+
 		.skills-container {
 			text-align: center;
 		}
@@ -412,6 +419,7 @@
 					<h3>
 						Vehicle Data Analysis and Predictive Modeling Using R
 					</h3>
+					<p class="project-date">Jan 2025</p>
 					<p>
 						This project focuses on comprehensive vehicle data analysis using the R programming language and
 						R Studio, showcasing various techniques in data preprocessing, exploratory data analysis (EDA),
@@ -432,6 +440,7 @@
 						Research Project: Mitigating Racial Bias in Natural Language Understanding with Graph Neural
 						Networks
 					</h3>
+					<p class="project-date">Sept 2024 - Dec 2024</p>
 					<p>
 						Natural Language Processing (NLP) models often inherit racial biases present in textual data. By
 						capturing semantic relationships with text, this research investigates the use of Graph Neural
@@ -449,6 +458,7 @@
 					<h3>
 						Pick a Plan - Mobile Application
 					</h3>
+					<p class="project-date">Sept 2024 - Dec 2024</p>
 					<p>
 						The PickaPlan project aims to create a Java-based software application for analyzing mobile data
 						plans. By leveraging advanced data structures and algorithms, the project focuses on providing
@@ -468,6 +478,7 @@
 					<h3>
 						Customer Classification based on Car Purchase (WEKA Project)
 					</h3>
+					<p class="project-date">Aug 2022 - Aug 2022</p>
 					<p>
 						The aim of this project was to implement the 2 different supervised learning algorithms on a
 						labelled dataset and an unsupervised learning algorithm on an unlabeled dataset. Weka tools had
@@ -483,6 +494,7 @@
 						Academic Thesis: Comparison of Moving Average Model and Deep Learning Model in Terms of Stock
 						Price Prediction
 					</h3>
+					<p class="project-date">Sep 2021 - Apr 2022</p>
 					<p>
 						The stock market's unpredictability and complexity make predicting stock prices challenging.
 						Despite this, financial experts use algorithms, including machine learning and deep learning, to
@@ -500,6 +512,7 @@
 					<h3>
 						Research Project: Bangla Handwritten Digit Classification Using Raw Image Data
 					</h3>
+					<p class="project-date">Feb 2022 - Apr 2022</p>
 					<p>
 						In this project, the main focus was to classify Bangla handwritten digits from raw image data.
 						To accomplish this project, a dataset has been made of raw images and a convolutional neural
